force-app/main/default/objects/Meeting__c/Meeting__c.object-meta.xml
<CustomObject>
    <description>Logs zoom meeting details associated with virtual appointments.</description>
    <label>Meeting Log</label>
    <nameField>
        <displayFormat>MTG-{0000}</displayFormat>
        <label>Meeting Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>