force-app/main/default/objects/Meeting__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Appointment record</description>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Meeting Logs</relationshipLabel>
    <relationshipName>Meeting_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>