force-app/main/default/objects/Meeting__c/fields/Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Join_URL__c</fullName>
    <description>Zoom join meeting link for patients/participants</description>
    <label>Join URL</label>
    <type>Url</type>
</CustomField>