force-app/main/default/objects/Meeting__c/fields/Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_ID__c</fullName>
    <description>Zoom generated Meeting ID</description>
    <label>Meeting ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>