force-app/main/default/objects/Meeting__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Zoom meeting start time</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>