force-app/main/default/objects/Meeting__c/fields/Start_URL__c.field-meta.xml
<CustomField>
    <fullName>Start_URL__c</fullName>
    <description>Zoom start meeting link for hosts/doctors</description>
    <label>Start URL</label>
    <type>Url</type>
</CustomField>