force-app/main/default/objects/Meeting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Zoom meeting status</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>