force-app/main/default/objects/Meeting__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>Zoom meeting topic</description>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>